# ChangeLog for net-misc/openssh
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/openssh/ChangeLog,v 1.38 2003/04/02 18:47:31 lostlogic Exp $

*openssh-3.6.1_p1 (02 Apr 2003)

  02 Apr 2003; Brandon Low <lostlogic@gentoo.org> openssh-3.6.1_p1.ebuild:
  Bump

*openssh-3.6_p1 (02 Apr 2003)

  02 Apr 2003; Brandon Low <lostlogic@gentoo.org> openssh-3.6_p1.ebuild:
  Bump, required some modifications to the selinux patch, test thoroughly

  09 Feb 2003; Guy Martin <gmsoft@gentoo.org> :
  Added hppa to keywords.

*openssh-3.5_p1-r1 (20 Jan 2003)

  30 Mar 2003; Joshua Brindle <method@gentoo.org> openssh-3.5_p1-r1.ebuild:
  fixed compile options for selinux support

  20 Mar 2003; Joshua Brindle <method@gentoo.org> openssh-3.5_p1-r1.ebuild:
  added selinux support

  15 Mar 2003; Jan Seidel <tuxus@gentoo.org> :
  Added mips to KEYWORDS

  13 Mar 2003; Zach Welch <zwelch@gentoo.org> openssh-3.5_p1-r1.ebuild:
  add arm keyword

  09 Mar 2003; Aron Griffis <agriffis@gentoo.org> openssh-3.5_p1-r1.ebuild:
  Mark stable on alpha

  01 Mar 2003; Brandon Low <lostlogic@gentoo.org> openssh-3.5_p1-r1.ebuild:
  make -> emake

  21 Jan 2003; Nick Hadaway <raker@gentoo.org> openssh-3.5_p1-r1.ebuild :
  Changed USE="kerberos" to depend on app-crypt/krb5 as heimdal is not
  compatible currently.  Install app-crypt/kth-krb and set KTH_KRB="yes"
  to enable Kerberos IV support.

  20 Jan 2003; Nick Hadaway <raker@gentoo.org> openssh-3.5_p1-r1.ebuild,
  files/digest-openssh-3.5_p1-r1 :
  Added kerberos use flag support.

  09 Dec 2002; Donny Davies <woodchip@gentoo.org> openssh-3.5_p1.ebuild,
  openssh-3.4_p1-r2.ebuild, openssh-3.4_p1-r3.ebuild : Add a shells reminder.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
  01 Dec 2002; Jack Morgan <jmorgan@gentoo.org> openssh-3.5_p1.ebuild :
  Removed ~ from sparc/sparc64 keywords.
