@@ -1,0 +1,2 @@
+MD5 f3879270bffe479e1bd057aa36258696 openssh-3.6.1p2.tar.gz 879629
+MD5 c425e65927b359382bf3618d265d45f1 openssh_3.6p1-5.se1.diff.bz2 54985
